--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "flexboxgrid": "^6.3.1",
     "react": "^15.5.4",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^15.5.4"
   },
   "scripts": {
