--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "flexboxgrid": "^6.3.1",
+    "i": "^0.3.6",
+    "npm": "^6.4.1",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^15.5.4"
