little help by husband :*

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "japan",
+  "name": "valdivia",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/valdivia",
   "devDependencies": {
     "react-scripts": "0.9.5"
   },
